--- a/denogram/package.json
+++ b/denogram/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "graphql": "^16.3.0",
+    "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
